--- a/src/enigma.scss
+++ b/src/enigma.scss
@@ -17,10 +17,10 @@ body {
   position: relative;
   float: right;
   top: 5px;
-}
 
-.enigma-logo img {
-  width: 120px;
+  img {
+    width: 120px;
+  }
 }
 
 #enigma-output {
